--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
   schedule:
     # Every 24 hours
-    - cron: "0 0 * * *"
+    - cron: "0 1 * * *"
 
 permissions:
   contents: read
@@ -23,23 +23,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v6
-      - name: Setup Node
-        uses: actions/setup-node@v6
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
         with:
           node-version: 24
-          cache: npm
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
+      - uses: actions/configure-pages@v5
         with:
           static_site_generator: next
-      - name: Install dependencies
-        run: npm ci
-      - name: Build with Next.js
-        run: npm run build
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4
+      - run: npm ci
+      - run: npm run build
+      - uses: actions/upload-pages-artifact@v4
         with:
           path: ./out
 
@@ -50,6 +43,5 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
+      - id: deployment
         uses: actions/deploy-pages@v4
