--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -19,10 +19,6 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-defaults:
-  run:
-    working-directory: ./packages/website
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -36,6 +32,7 @@ jobs:
           static_site_generator: next
       - run: npm ci
       - run: npm run build
+        working-directory: ./packages/website
         env:
           NEXT_PUBLIC_WEBSITE_SOURCE_REPOSITORY: ${{ github.server_url }}/${{ github.repository }}
           NEXT_PUBLIC_WEBSITE_CONTRIBUTION_GUIDELINES: ${{ vars.WEBSITE_CONTRIBUTION_GUIDELINES }}
@@ -44,7 +41,7 @@ jobs:
           NEXT_PUBLIC_WEBSITE_DATA_URL: ${{ vars.WEBSITE_DATA_URL }}
       - uses: actions/upload-pages-artifact@v4
         with:
-          path: ./out
+          path: ./packages/website/out
 
   deploy:
     environment:
