--- a/.github/workflows/deploy-site.yml
+++ b/.github/workflows/deploy-site.yml
@@ -19,6 +19,10 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
+defaults:
+  run:
+    working-directory: ./packages/website
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -30,9 +34,8 @@ jobs:
       - uses: actions/configure-pages@v5
         with:
           static_site_generator: next
-      - run: npm ci -w website
+      - run: npm ci
       - run: npm run build
-        working-directory: ./packages/website
         env:
           NEXT_PUBLIC_WEBSITE_SOURCE_REPOSITORY: ${{ github.server_url }}/${{ github.repository }}
           NEXT_PUBLIC_WEBSITE_CONTRIBUTION_GUIDELINES: ${{ vars.WEBSITE_CONTRIBUTION_GUIDELINES }}
