split data.json

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,3 +1,4 @@
 # Nested prettierignore files are not yet supported
-packages/data/data.json
+packages/data/banks.json
+packages/data/merchants.json
 packages/website/components/ui
